test/positive/feature_octalescape.java
public class feature_octalescape {
  public feature_octalescape() {}
  protected String a = "\377";
  protected String b = "\77";
  protected String c = "\7";
  protected String d = "\000";
}
