test/negative/feature_octalescape.java
public class feature_octalescape {
  public feature_octalescape() {}
  protected String a = "\477";
}
